# braz-speech-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  config.py  example.token.json  fix_segments_offset.py  main.py  pyproject.toml  requirements.txt
scripts/: analyze_files_consistensy.ipynb  analyze_transcription_hours.ipynb  audios_consistency.xlsx  database_sanity_check.ipynb  duplicated_audios.csv  fix_segments_offset.py  generate_spreadsheet_for_validation.ipynb  get_audios_with_problem.py
scripts/process_mupe_metadata/: Parceria_USP_listagens.xlsx - Novas histórias.csv  USP_projeto_ponto_cultura.xlsx - lista_personagem_projeto_ponto_.csv  process_metadata.ipynb
src/: config.py
src/clients/: database.py  google_drive.py  scp_transfer.py  storage_base.py
src/models/: audio.py  file.py  segment.py
src/pipelines/: diarize_and_transcribe.py  diarize_and_transcribe_nurc.py  export.py  transcribe.py
src/services/: audio_loader_service.py  exporter.py  output_persistance_service.py  transcription_service.py
src/steps/: __init__.py  audio_loader.py  audio_to_text_segments.py  diarizer.py  transcriber.py
src/utils/: database.py  exceptions.py  files.py  google_drive.py  logger.py  scp_transfer.py
