[tool.poetry]
name = "braz-speech-pipeline"
version = "0.1.0"
description = ""
authors = ["molinavinicius <vinymg98@gmail.com>"]
readme = "README.md"
packages = [{include = "braz_speech_pipeline"}]

[tool.poetry.dependencies]
python = "^3.9"
google-auth = "^2.20.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.89.0"
openai-whisper = "^20230314"

whisperx = {git = "https://github.com/m-bain/whisperx.git"}
tqdm = "^4.65.0"
soundfile = "^0.12.1"
pandas = "^2.0.2"
pydub = "^0.25.1"
sshtunnel = "^0.4.0"
pymysql = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
