[tool.poetry]
name = "braz-speech-pipeline"
version = "0.1.0"
description = ""
authors = ["Vinicius Molina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
google-auth = "^2.20.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.89.0"
whisperx = {git = "https://github.com/m-bain/whisperx.git"}
tqdm = "^4.65.0"
soundfile = "^0.12.1"
pandas = "^2.0.2"
pydub = "^0.25.1"
sshtunnel = "^0.4.0"
pymysql = "^1.0.3"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
scp = "^0.14.5"
librosa = "^0.10.0.post2"
pydantic = "^2.5.2"
textgrid = "^1.5"
torchaudio = "^2.1.0"
pyarrow = "^14.0.0"
transformers = "^4.35.2"
ffmpeg = "^1.4"
nltk = "^3.8.1"
ctranslate2 = "^3.22.0"
faster-whisper = "^0.10.0"
pyannote-audio = "^3.1.0"
levenshtein = "^0.23.0"
pydantic-settings = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
